2005-09-23  J"orn Rennecke <joern.rennecke@st.com>

	* final.c (insn_default_length, insn_min_length): In !HAVE_ATTR_length
	case, define as macros.

	PR rtl-optimization/23837
	*  optabs.c (no_conflict_move_test): Don't set must_stay for a
	clobber / clobber match between dest and p->first.

2005-09-22  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* doc/install.texi: Update URL for Jacks.
	* doc/sourcebuild.texi: Likewise.

2005-09-22  David Edelsohn  <edelsohn@gnu.org>

        PR target/24007
        * config/rs6000/rs6000.md (movsf_hardfloat): Ignore special
        registers when choosing register preferences.
        (movdf_hardfloat64): Same.

2005-09-22  Andreas Krebbel  <krebbel1@de.ibm.com>

	* expmed.c (expand_shift): Don't use the target of the rotate as
	target for the first expanded shift insn.
	* testsuite/gcc.dg/20050922-1.c: Testcase added.

2005-09-21  Zdenek Dvorak  <dvorakz@suse.cz>

	PR tree-optimization/22438
	* tree-ssa-loop-ivopts.c (rewrite_use_nonlinear_expr): Handle all
	preserved iv rhs rewriting specially.

2005-09-21  Daniel Berlin  <dberlin@dberlin.org>

	* tree-data-ref.c (analyze_array_indexes): Only estimate when
	estimate_only  is true.
	* tree-flow.h (ref_contains_indirect_ref): New prototype.
	* tree-flow-inline.h (ref_contains_indirect_ref): Moved from
	tree-ssa-structalias.c 
	* tree-ssa-loop-niter.c (infer_loop_bounds_from_undefined): Use
	ref_contains_indirect_ref.
	* tree-ssa-structalias.c (ref_contains_indirect_ref): Moved.

2005-09-21  DJ Delorie  <dj@redhat.com>

	* config/mn10300/mn10300.c (TARGET_DEFAULT_TARGET_FLAGS): Add
	MASK_PTR_A0D0.
	(mn10300_return_in_memory): Support variable size types also.
	(mn10300_pass_by_reference): Likewise.
	(mn10300_function_value): New.
	* config/mn10300/mn10300.h (FUNCTION_VALUE): Call the above.
	(FUNCTION_OUTGOING_VALUE): Likewise.
	* config/mn10300/mn10300.opt: Add -mreturn-pointer-on-d0.
	* doc/invoke.texi: Document it.

2005-09-21  Uros Bizjak  <uros@kss-loka.si>

	PR target/22585